--- a/home.html
+++ b/home.html
@@ -8,5 +8,7 @@
      WoW! wow! wow!
          <p><b>Successfully hosted herokuapp.</b></p>
          <p>This is my first herokuapp hosting test. I am success in very first testing.
+             <p> <a href="url">link text</a>
+                 For Know me: <a hrep="https://fb.com/ekushya">facebook</a> |  <a hrep="https://steemit.com/@ekushya">steem</a> | <a hrep="https://hive.blog/@ekushya">hive</a>
      </bod>
      </html>
