--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
          <p><b>Successfully hosted herokuapp.</b></p>
          <p>This is my first herokuapp hosting test. I am success in very first testing.
              <p>
-                 For Know me: <a hrep="https://fb.com/ekushya">facebook</a> |  <a hrep="https://steemit.com/@ekushya">steem</a> | <a hrep="https://hive.blog/@ekushya">hive</a>
+                 For Know me: <a href="https://fb.com/ekushya">facebook</a> |  <a href="https://steemit.com/@ekushya">steem</a> | <a href="https://hive.blog/@ekushya">hive</a>
          </p>
      </bod>
      </html>
