--- a/home.html
+++ b/home.html
@@ -5,11 +5,11 @@
      </head>
      
      <bod>
-     WoW! wow! wow!
-         <p><b>Successfully hosted herokuapp.</b></p>
-         <p>This is my first herokuapp hosting test. I am success in very first testing.
-             <p>
+         <h1><center>WoW! wow! wow!</center></h1>
+         <h2><center> <p><b>Successfully hosted herokuapp.</b></p></center><h2>
+         <h3><center><p>This is my first herokuapp hosting test. I am success in very first testing.</center</h2>
+             <p><center>
                  For Know me: <a href="https://fb.com/ekushya">facebook</a> |  <a href="https://steemit.com/@ekushya">steem</a> | <a href="https://hive.blog/@ekushya">hive</a>
-         </p>
+         </center</p>
      </bod>
      </html>
